--- a/composer.json
+++ b/composer.json
@@ -19,19 +19,19 @@
     ],
     "require": {
         "php": "^8.3",
-        "symfony/framework-bundle": "^7.2",
-        "symfony/console": "^7.2",
+        "symfony/framework-bundle": "^7.3",
+        "symfony/console": "^7.3",
         "typesense/typesense-php": "^4.9",
         "php-http/curl-client": "^2.3",
-        "symfony/http-client": "^7.2",
-        "symfony/cache": "^7.2",
-        "symfony/config": "^7.2",
-        "symfony/http-kernel": "^7.2",
-        "symfony/dependency-injection": "^7.2",
-        "symfony/options-resolver": "^7.2",
+        "symfony/http-client": "^7.3",
+        "symfony/cache": "^7.3",
+        "symfony/config": "^7.3",
+        "symfony/http-kernel": "^7.3",
+        "symfony/dependency-injection": "^7.3",
+        "symfony/options-resolver": "^7.3",
         "nyholm/dsn": "^2.0@dev",
         "symfony/orm-pack": "dev-main",
-        "symfony/string": "7.2"
+        "symfony/string": "7.3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
